<resources>
    <string name="app_name">Waithira_Jane_S2110907</string>
    <string name="google_maps_key" translatable= "false">AIzaSyBo03rQ3r5t9st2QiA3ujnKXLEAvsU4UD8</string>
    <string name="weather_description">Weather Description</string>
    <string name="wind_speed_humidity">Wind Speed, Humidity</string>
    <string name="location">Location</string>
    <string name="temp">Temp</string>
    <string name="todo">TODO</string>
    <string name="locationtext">locationText</string>
    <string name="visibility">Visibility</string>
    <string name="value">value</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrisev">sunriseV</string>
    <string name="sunset">sunset</string>
    <string name="day">day</string>
    <string name="settings">Settings</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="unit">Unit</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="min">min</string>
    <string name="humidity_icon_description">humidity_icon_description</string>
    <string name="wind_direction">Wind direction</string>
    <string name="air_pollution">Air Pollution</string>
    <string name="temperature_format">Temp: %.1f°C</string>
    <string name="uv_risk_format">UV: %d</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="weather">Weather</string>
    <string name="s2110907">S2110907</string>
    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="refresh_settings">
        <item>Default(08:00 and 20:00)</item>
        <item>Every 3 hours</item>
        <item>Every 6 hours</item>
    </string-array>


</resources>