<?xml version="1.0" encoding="utf-8"?>
<!-- Jane Waithira S2110907 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_centerInParent="true"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="14dp"
    android:background="@drawable/rounded_background"
    android:padding="14dp"
    tools:ignore="TextSizeCheck">


    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/anek_latin"
        android:text="@string/temp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/anek_latin"
        android:text="@string/location"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/windHumidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/anek_latin"
        android:text="@string/wind_speed_humidity"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/weatherDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/anek_latin"
        android:text="@string/weather_description"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
