<?xml version="1.0" encoding="utf-8"?>
<!-- Jane Waithira S2110907 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <!-- Top Bar with Back Arrow and Location Name -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription=""/>

        <ImageView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_location_pin_24"/>




        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="location_name"
            android:fontFamily="@font/anek_latin"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/anek_latin"
        android:textColor="@color/white"
        android:hint="Date"
        android:textAlignment="center"/>

    <!-- Weather Icon -->
    <FrameLayout
        android:id="@+id/weatherIcon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@id/topBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/focusedWeatherIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </FrameLayout>



    <!-- Weather Description -->
    <TextView
        android:id="@+id/weatherDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weatherIcon"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/anek_latin"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/weather_description"
        android:textSize="20sp"/>

    <!-- Minimum and Maximum Temperature -->
    <LinearLayout
        android:id="@+id/minMaxTemperatureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/weatherDescriptionText"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minimumTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/anek_latin"
            android:gravity="start"
            android:hint="@string/min"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/maximumTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:gravity="end"
            android:textStyle="bold"
            android:fontFamily="@font/anek_latin"
            android:layout_marginEnd="40dp"
            android:hint="max"
            android:textSize="18sp"/>

    </LinearLayout>

    <!-- Humidity, Wind, and UV Risk -->
    <LinearLayout
        android:id="@+id/humidityWindUVLayout"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/minMaxTemperatureLayout"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:padding="5dp">

        <!-- Humidity -->

        <!-- Wind -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="43dp"
                android:contentDescription="@string/humidity_icon_description"
                android:src="@drawable/baseline_water_drop_24" />

            <TextView
                android:id="@+id/humidityDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:fontFamily="@font/anek_latin"
                android:text="value"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:textSize="17sp"
                android:fontFamily="@font/anek_latin"
                android:text="Humidity"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/wind"
                android:contentDescription="wind_icon_description"/>

            <TextView
                android:id="@+id/windValue"
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/anek_latin"
                android:layout_marginStart="40dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="value"/>

            <TextView
                android:id="@+id/windDescription"
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginStart="43dp"
                android:textSize="17sp"
                android:fontFamily="@font/anek_latin"
                android:layout_height="wrap_content"
                android:text="Wind"/>

        </LinearLayout>

        <!-- UV Risk -->
        <LinearLayout
            android:id="@+id/basicInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="42dp"
                android:src="@drawable/sun"
                android:contentDescription="uv_risk_icon_description"/>

            <TextView
                android:id="@+id/uvRiskValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginStart="50dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:fontFamily="@font/anek_latin"
                android:text="value"/>

            <TextView
                android:id="@+id/uvRiskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginStart="43dp"
                android:textSize="17sp"
                android:fontFamily="@font/anek_latin"
                android:text="Uv Risk"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/visibilitySun"
        android:layout_width="390dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidityWindUVLayout">


    <RelativeLayout
        android:id="@+id/VisibilityLayout"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:layout_marginTop="3dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background">

        <ImageView
            android:id="@+id/visibilityImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/visibility"
            />

        <TextView
            android:id="@+id/visibilityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visibilityImage"
            android:layout_centerInParent="true"
            android:text="@string/visibility"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/anek_latin"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/visibilityValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/anek_latin"
            android:textSize="17sp"
            android:hint="@string/value"
            android:layout_below="@+id/visibilityText"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunriseSunsetLayout"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_background">

        <ImageView
            android:id="@+id/sunrise"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:src="@drawable/sunrise"/>
        <TextView
            android:id="@+id/sunriseText"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/anek_latin"
            android:layout_below="@+id/sunrise"
            android:text="@string/sunrise"
            android:textSize="17sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/sunriseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_below="@+id/sunriseText"
            android:hint="@string/sunrise"
            android:fontFamily="@font/anek_latin"
            android:textSize="17sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/sunsetImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sunset"/>
        <TextView
            android:id="@+id/sunsetText"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/sunsetImage"
            android:textSize="17sp"
            android:fontFamily="@font/anek_latin"
            android:text="Sunset"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/sunsetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/sunsetText"
            android:fontFamily="@font/anek_latin"
            android:hint="Sunset"
            android:textSize="17sp"
            android:layout_marginEnd="7dp"
            android:textColor="@color/white"/>


    </RelativeLayout>

    </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/threeDayWeather"
       android:layout_width="390dp"
       android:layout_marginStart="10dp"
       android:layout_height="wrap_content"
       android:background="@drawable/rounded_background"
       android:layout_below="@+id/visibilitySun"
       android:layout_marginTop="3dp"/>

    <RelativeLayout
        android:id="@+id/extraContent"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_background"
        android:layout_below="@+id/threeDayWeather"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/windDirection"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp">

            <ImageView
                android:id="@+id/windDirectionImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/wind_direction"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_direction"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/windDirectionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Value"
                android:textAlignment="viewEnd"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/airPressure"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_below="@+id/windDirection"
            android:layout_marginTop="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/air_pressure"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Air Pressure"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="13dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/airPressureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Value"
                android:layout_marginStart="150dp"
                android:textAlignment="viewEnd"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="13dp"/>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>


